# ATLAS-phd

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES_v0.7.0.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: build-image.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_progress_info.py  0003_add_tsvector.py  0004_add_qa_feedback.py  0005_m4a_multitenancy.py  0006_m4b_tenant_indexes.py  0007_m45_rename_default_tenant.py  0008_m45_program_schema.py
corpus/: born_wolf_principles_of_optics_1973_ocr_pages.jsonl  matveev_optika_1985_ocr_pages.jsonl  yariv_optical_waves_in_crystals_ocr_pages.jsonl
docker/: app.Dockerfile  embeddings.Dockerfile  embeddings_service.py
docs/: acceptance_tests.md  bdd-scenarios.md  design-roadmap.md  governance.md  product-proposal.md  requirements.md  roadmap.md  runbook.md  system-design.md  technical_specification.md  use_cases.md
docs/design/: demo-script.md  (+7 more)
eval/: per_topic_breakdown.py  report.py  run_eval.py  runner.py  schema.py  score.py
idea/: idea.md
scripts/: attach_corpus_by_keywords.py  daily_metrics_report.py  demo_questions.json  deploy.sh  eval_smoke.sh  pg_backup.sh  pilot_seed.py  seed_corpus.sh  seed_demo.sh  seed_demo_attempts.py  seed_demo_real_attempts.py  seed_demo_showcase.py  seed_demo_users.py  verify_demo_questions.py
tests/: test_m3a_hard_gate.py  test_m45a_program_lifecycle.py  test_m4a_tenant_readonly.py  test_m4c_auth_invite.py  test_m4d_cross_tenant_isolation.py  test_m5_supervisor_privacy.py
(+100 files in other folders)
